--- a/src/PSADT/PSADT.ClientServer.Server/PSADT.ClientServer.Server.csproj
+++ b/src/PSADT/PSADT.ClientServer.Server/PSADT.ClientServer.Server.csproj
@@ -7,6 +7,7 @@
     <Product>PSAppDeployToolkit Client/Server Server Library</Product>
     <AssemblyTitle>PSAppDeployToolkit Client/Server Server Library</AssemblyTitle>
     <AssemblyDescription>This product is utilised by PSAppDeployToolkit for performing user actions from the SYSTEM account.</AssemblyDescription>
+    <NoWarn>SYSLIB1045</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
