Remove everything we're not using from `NativeMethods.txt`.
The compiled DLL (particularly the .pdb file) is getting too large.

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -19,6 +19,8 @@
     <Platforms>AnyCPU</Platforms>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
+    <EmbedAllSources>false</EmbedAllSources>
+    <EmbedUntrackedSources>false</EmbedUntrackedSources>
   </PropertyGroup>
 
   <!-- Common company/product metadata -->
