--- a/src/PSADT/PSADT.LibraryInterfaces/PSADT.LibraryInterfaces.csproj
+++ b/src/PSADT/PSADT.LibraryInterfaces/PSADT.LibraryInterfaces.csproj
@@ -16,6 +16,7 @@
     <InternalsVisibleTo Include="PSADT" />
     <InternalsVisibleTo Include="PSADT.ClientServer.Client" />
     <InternalsVisibleTo Include="PSADT.UserInterface" />
+    <InternalsVisibleTo Include="PSAppDeployToolkit" />
   </ItemGroup>
 
   <ItemGroup>
