--- a/src/PSADT/PSADT.UserInterface.TestHarness/PSADT.UserInterface.TestHarness.csproj
+++ b/src/PSADT/PSADT.UserInterface.TestHarness/PSADT.UserInterface.TestHarness.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PSADT.UserInterface\PSADT.UserInterface.csproj" />
+    <ProjectReference Include="..\PSAppDeployToolkit\PSAppDeployToolkit.csproj" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
