Add branch and git commit hash into artifact name suffix.

--- a/.github/workflows/module-build.yml
+++ b/.github/workflows/module-build.yml
@@ -71,16 +71,16 @@ jobs:
       shell: powershell
       run: Invoke-Build -File .\src\PSAppDeployToolkit.build.ps1
 
-    - name: Make timestamp
+    - name: Make artifact name suffix
       id: ts
       shell: powershell
       run: |
-        "stamp=$([System.DateTime]::Now.ToUniversalTime().ToString('O').Replace(':', $null) -replace '\.\d+')" >> $env:GITHUB_OUTPUT
+        "suffix=$($env:GITHUB_HEAD_REF.Split('/')[-1])_$($env:GITHUB_SHA.Substring(0, 7))_$([System.DateTime]::Now.ToUniversalTime().ToString('O').Replace(':', $null) -replace '\.\d+')" >> $env:GITHUB_OUTPUT
 
     - name: Upload module
       uses: actions/upload-artifact@v6
       with:
-        name: PSAppDeployToolkit_ModuleOnly_${{ steps.ts.outputs.stamp }}
+        name: PSAppDeployToolkit_ModuleOnly_${{ steps.ts.outputs.suffix }}
         path: .\src\Artifacts\Module
         if-no-files-found: error
         compression-level: 9
@@ -89,7 +89,7 @@ jobs:
     - name: Upload v3 module template
       uses: actions/upload-artifact@v6
       with:
-        name: PSAppDeployToolkit_Template_v3_${{ steps.ts.outputs.stamp }}
+        name: PSAppDeployToolkit_Template_v3_${{ steps.ts.outputs.suffix }}
         path: .\src\Artifacts\Template_v3
         if-no-files-found: error
         compression-level: 9
@@ -98,7 +98,7 @@ jobs:
     - name: Upload v4 module template
       uses: actions/upload-artifact@v6
       with:
-        name: PSAppDeployToolkit_Template_v4_${{ steps.ts.outputs.stamp }}
+        name: PSAppDeployToolkit_Template_v4_${{ steps.ts.outputs.suffix }}
         path: .\src\Artifacts\Template_v4
         if-no-files-found: error
         compression-level: 9
