--- a/.github/workflows/module-build.yml
+++ b/.github/workflows/module-build.yml
@@ -56,7 +56,12 @@ jobs:
       shell: powershell
       run: Install-Module -Name PowerShellGet -Repository PSGallery -Force
 
+    - name: Test and Build
+      shell: powershell
+      run: Invoke-Build -File .\src\PSAppDeployToolkit.build.ps1
+
     - name: Install AzureSignTool
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/4.0.x' || github.ref == 'refs/heads/4.1.x'
       run: dotnet tool install --global azuresigntool
 
     - name: Azure Login
@@ -67,9 +72,28 @@ jobs:
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    - name: Test and Build
+    - name: Sign module source
+      if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/4.0.x' || github.ref == 'refs/heads/4.1.x'
       shell: powershell
-      run: Invoke-Build -File .\src\PSAppDeployToolkit.build.ps1
+      run: |
+        Get-ChildItem -Path "$($PWD)\src\Artifacts\Module\PSAppDeployToolkit" -Include '*.ps*1', 'PSAppDeployToolkit.dll', 'PSADT*.dll', 'PSADT*.exe', 'iNKORE.UI.WPF*.dll', 'Deploy-Application.exe', 'Invoke-AppDeployToolkit.exe' -Recurse | Select-Object -ExpandProperty FullName | Out-File "FilesToSign.txt"
+        & azuresigntool.exe sign -s -kvu https://psadt-kv-prod-codesign.vault.azure.net -kvc PSADT -kvm -tr http://timestamp.digicert.com -td sha256 -ifl FilesToSign.txt
+
+    - name: Generate artifact templates
+      shell: powershell
+      run: |
+        $ArtifactsPath = "$($PWD)\src\Artifacts"
+        $BuildModuleRoot = "$ArtifactsPath\Module\PSAppDeployToolkit"
+        $spParams = @{
+            FilePath = [System.Diagnostics.Process]::GetCurrentProcess().Path
+            ArgumentList = "-ExecutionPolicy Bypass -NonInteractive -NoProfile -NoLogo -Command `$ErrorActionPreference = 'Stop'; Import-Module -Name '$BuildModuleRoot'; $([System.String]::Join('; ', (3, 4).ForEach({"New-ADTTemplate -Destination '$ArtifactsPath' -Name 'Template_v$_' -Version $_"})))"
+            NoNewWindow = $true
+            Wait = $true
+        }
+        if ((Start-Process @spParams -PassThru).ExitCode -ne 0)
+        {
+            throw "Failed to generate frontend templates."
+        }
 
     - name: Make artifact name suffix
       id: ts
