--- a/.github/workflows/module-build.yml
+++ b/.github/workflows/module-build.yml
@@ -42,12 +42,6 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-nuget-
 
-    - name: Cache PowerShell modules
-      uses: potatoqualitee/psmodulecache@v6.2.1
-      with:
-        modules-to-cache: Pester:5.7.1, InvokeBuild:5.14.20, PSScriptAnalyzer:1.24.0, platyPS:0.14.2, Alt3.Docusaurus.Powershell:1.0.37
-        shell: powershell
-
     - name: NuGet Latest
       shell: powershell
       run: Install-PackageProvider -Name NuGet -Confirm:$false -Force -Verbose
@@ -56,9 +50,15 @@ jobs:
       shell: powershell
       run: Install-Module -Name PowerShellGet -Repository PSGallery -Force
 
+    - name: Cache PowerShell modules
+      uses: potatoqualitee/psmodulecache@v6.2.1
+      with:
+        modules-to-cache: Pester:5.7.1, InvokeBuild:5.14.20, PSScriptAnalyzer:1.24.0, platyPS:0.14.2, Alt3.Docusaurus.Powershell:1.0.37
+        shell: powershell
+
     - name: Test and Build
-      shell: powershell
-      run: Invoke-Build -File .\src\PSAppDeployToolkit.build.ps1
+      shell: cmd
+      run: powershell.exe -ExecutionPolicy Bypass -File build.ps1
 
     - name: Install AzureSignTool
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/4.0.x' || github.ref == 'refs/heads/4.1.x'
@@ -82,18 +82,7 @@ jobs:
     - name: Generate artifact templates
       shell: powershell
       run: |
-        $ArtifactsPath = "$($PWD)\src\Artifacts"
-        $BuildModuleRoot = "$ArtifactsPath\Module\PSAppDeployToolkit"
-        $spParams = @{
-            FilePath = [System.Diagnostics.Process]::GetCurrentProcess().Path
-            ArgumentList = "-ExecutionPolicy Bypass -NonInteractive -NoProfile -NoLogo -Command `$ErrorActionPreference = 'Stop'; Import-Module -Name '$BuildModuleRoot'; $([System.String]::Join('; ', (3, 4).ForEach({"New-ADTTemplate -Destination '$ArtifactsPath' -Name 'Template_v$_' -Version $_"})))"
-            NoNewWindow = $true
-            Wait = $true
-        }
-        if ((Start-Process @spParams -PassThru).ExitCode -ne 0)
-        {
-            throw "Failed to generate frontend templates."
-        }
+        & (Import-Module -Name .\src\PSAppDeployToolkit.Build -PassThru) { Invoke-ADTCustomModuleBuild -Actions 'Export-ADTScriptTemplate' }
 
     - name: Make artifact name suffix
       id: ts
@@ -128,68 +117,10 @@ jobs:
         compression-level: 9
         overwrite: true
 
-    - name: Update Website Docs
+    - name: Generate docs and update website
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/4.0.x' || github.ref == 'refs/heads/4.1.x'
       shell: powershell
       env:
         API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
       run: |
-        # Perform initial setup.
-        $ErrorActionPreference = [System.Management.Automation.ActionPreference]::Stop
-        Set-StrictMode -Version 3
-
-        # Clone the destination repo.
-        $dstBnch = 'main'
-        $dstRepo = "https://$env:API_TOKEN_GITHUB@github.com/$env:GITHUB_REPOSITORY_OWNER/website.git"
-        $dstBase = [System.IO.Path]::Combine([System.IO.Path]::GetTempPath(), [System.IO.Path]::GetRandomFileName())
-        $dstPath = ("$dstBase\docs\reference\functions", "$dstBase\versioned_docs\version-4.0.0\reference\functions")[$env:GITHUB_REF_NAME -match '4\.0\.x']
-        Write-Host -Object "Cloning destination repository, please wait..."
-        git clone -b $dstBnch $dstRepo $dstBase
-        if ($Global:LASTEXITCODE)
-        {
-          throw "The cloning of the destination repository failed."
-        }
-
-        # Update the docs from the source repo to the destination.
-        Write-Host -Object "Updating the markdown files in destination repository."
-        Remove-Item -Path "$dstPath\*" -Force -Confirm:$false
-        Get-ChildItem -Path ".\src\Artifacts\Docusaurus\commands\*" -File | Copy-Item -Destination $dstPath
-
-        # Change into the repository's directory.
-        Push-Location -LiteralPath $dstBase
-
-        # Add any changes that may exist.
-        git add --all
-
-        # Commit any changes if found.
-        if (git diff --cached)
-        {
-          # Set up author details.
-          git config user.email "$env:USERNAME@psappdeploytoolkit.com"
-          git config user.name "PSAppDeployToolkit Action Workflow"
-
-          # Do the commit.
-          $commitMsg = "Commit of document changes from https://github.com/$env:GITHUB_REPOSITORY/commit/$env:GITHUB_SHA"
-          Write-Host -Object "Documents changed, committing as `"$commitMsg`""
-          git commit -a -m $commitMsg
-          if ($Global:LASTEXITCODE)
-          {
-            throw "The committing of destination repo changes failed."
-          }
-
-          # Push it to the website.
-          Write-Host -Object "Pushing committed changes to origin."
-          git push origin
-          if ($Global:LASTEXITCODE)
-          {
-            throw "The pushing of commits from destination repo failed."
-          }
-          Write-Host -Object "Successfully completed operation."
-        }
-        else
-        {
-          Write-Host -Object "Found no document changes to commit."
-        }
-
-        # Pop back to the original $PWD.
-        Pop-Location
+        & (Import-Module -Name .\src\PSAppDeployToolkit.Build -PassThru) { Invoke-ADTCustomModuleBuild -Actions 'Import-ADTReleaseModule', 'Invoke-ADTMarkdownExport', 'Invoke-ADTDocusaurusExport', 'Publish-ADTDocusaurusExport' }
