--- a/.github/workflows/module-build.yml
+++ b/.github/workflows/module-build.yml
@@ -80,7 +80,7 @@ jobs:
       id: ts
       shell: powershell
       run: |
-        "suffix=$(if ($env:GITHUB_REF_NAME -match 'merge$') {$env:GITHUB_REF_NAME.Split('/')[-2]} else {$env:GITHUB_REF_NAME.Split('/')[-1]})_$($env:GITHUB_SHA.Substring(0, 7))_$([System.DateTime]::Now.ToUniversalTime().ToString('O').Replace(':', $null) -replace '\.\d+')" >> $env:GITHUB_OUTPUT
+        "suffix=$(if ($env:GITHUB_REF_NAME -match 'merge$') {$env:GITHUB_REF_NAME.Split('/')[-2]} else {$env:GITHUB_REF_NAME.Split('/')[-1]})_$($env:GITHUB_SHA.Substring(0, 7))_$([System.DateTime]::Now.ToUniversalTime().ToString('O').Replace(':', [System.Management.Automation.Language.NullString]::Value) -replace '\.\d+')" >> $env:GITHUB_OUTPUT
 
     - name: Upload module
       uses: actions/upload-artifact@v6
