Remove `InvokeBuild` from psmodulecache setup in `module-build.yml`.

--- a/.github/workflows/module-build.yml
+++ b/.github/workflows/module-build.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Cache PowerShell modules
       uses: potatoqualitee/psmodulecache@v6.2.1
       with:
-        modules-to-cache: Pester:5.7.1, InvokeBuild:5.14.20, PSScriptAnalyzer:1.24.0, platyPS:0.14.2, Alt3.Docusaurus.Powershell:1.0.37
+        modules-to-cache: PSScriptAnalyzer:1.24.0, Pester:5.7.1, platyPS:0.14.2, Alt3.Docusaurus.Powershell:1.0.37
         shell: powershell
 
     - name: Test and Build
