Replace Newtonsoft.Json with System.Text.Json.
This is the actively used project these days, and with our own ExceptionConverter, the need for Newtonsoft.Json specifically is removed. It's supposed to be faster as well, so yay!

--- a/src/PSADT/PSADT/PSADT.csproj
+++ b/src/PSADT/PSADT/PSADT.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="System.Text.Json" Version="10.0.2" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
