Hook up forgotten `-NoWait` support for `Update-ADTGroupPolicy` user operations.
This necessitated adding a new `PSADT.ClientServer.Common` library due to circular reference issues but allowed us to move some code into better positions anyway.

--- a/src/PSADT/PSADT.ClientServer.Client/PSADT.ClientServer.Client.csproj
+++ b/src/PSADT/PSADT.ClientServer.Client/PSADT.ClientServer.Client.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PSADT.ClientServer.Common\PSADT.ClientServer.Common.csproj" />
     <ProjectReference Include="..\PSADT.ClientServer.Server\PSADT.ClientServer.Server.csproj" />
     <ProjectReference Include="..\PSADT.UserInterface\PSADT.UserInterface.csproj" />
     <ProjectReference Include="..\PSADT\PSADT.csproj" />
