--- a/src/PSADT/PSADT.UserInterface/PSADT.UserInterface.csproj
+++ b/src/PSADT/PSADT.UserInterface/PSADT.UserInterface.csproj
@@ -15,7 +15,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\lib\iNKORE.UI.WPF.Modern\source\iNKORE.UI.WPF.Modern.Controls\iNKORE.UI.WPF.Modern.Controls.csproj" />
     <ProjectReference Include="..\..\..\lib\iNKORE.UI.WPF.Modern\source\iNKORE.UI.WPF.Modern\iNKORE.UI.WPF.Modern.csproj" />
-    <ProjectReference Include="..\..\PSADT\PSADT\PSADT.csproj" />
+    <ProjectReference Include="..\PSADT\PSADT.csproj" />
+    <ProjectReference Include="..\PSADT.ClientServer.Common\PSADT.ClientServer.Common.csproj" />
     <ProjectReference Include="..\PSAppDeployToolkit\PSAppDeployToolkit.csproj" />
   </ItemGroup>
 
