--- a/src/PSADT/PSADT.UserInterface/PSADT.UserInterface.csproj
+++ b/src/PSADT/PSADT.UserInterface/PSADT.UserInterface.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net472;net8.0-windows10.0.18362.0</TargetFrameworks>
+    <TargetFrameworks>net472;net10.0-windows10.0.18362.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
@@ -61,10 +61,8 @@
     </Reference>
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows10.0.18362.0'">
-    <PackageReference Include="System.Management.Automation" Version="7.4.*" PrivateAssets="all" />
+  <ItemGroup Condition="'$(TargetFramework)' == 'net10.0-windows10.0.18362.0'">
+    <PackageReference Include="System.Management.Automation" Version="7.6.0-preview.5" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="10.0.2" />
-    <PackageReference Include="System.Collections.Immutable" Version="10.0.2" />
-    <PackageReference Include="System.Reflection.Metadata" Version="10.0.2" />
   </ItemGroup>
 </Project>
