--- a/src/PSADT/PSAppDeployToolkit/PSAppDeployToolkit.csproj
+++ b/src/PSADT/PSAppDeployToolkit/PSAppDeployToolkit.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net472;net8.0-windows10.0.18362.0</TargetFrameworks>
+    <TargetFrameworks>net472;net10.0-windows10.0.18362.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <RootNamespace>PSAppDeployToolkit</RootNamespace>
     <AssemblyName>PSAppDeployToolkit</AssemblyName>
@@ -24,8 +24,8 @@
     </Reference>
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows10.0.18362.0'">
-    <PackageReference Include="System.Management.Automation" Version="7.4.*" PrivateAssets="all" />
+  <ItemGroup Condition="'$(TargetFramework)' == 'net10.0-windows10.0.18362.0'">
+    <PackageReference Include="System.Management.Automation" Version="7.6.0-preview.5" PrivateAssets="all" />
     <PackageReference Include="System.Security.Permissions" Version="10.0.2" />
   </ItemGroup>
 
